# template-python-package

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: tests.yaml
contributing/: index.html
docs/: contributing.md  examples.md  index.md
docs/reference/: add_digit.md
docs/stylesheets/: style.css
examples/: index.html
package_name/: __init__.py  main.py
reference/add_digit/: index.html
search/: search_index.json
tests/: test_main.py
